--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <script src="https://kit.fontawesome.com/e0292d2e49.js" crossorigin="anonymous"></script>
         <title>
-            Labor Musics
+            Coding Musics
         </title>
     </head>
     <body>
